--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body{
-    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16 px;
-
+    color: #434455;
+    background-color: #FFFFFF;
 }
 
 h1{
@@ -54,5 +55,15 @@ h3{
 }
 
 .logo{
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
+.logo .partoflogo{
+    color: #2e2f42;
 }
