--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,13 @@ h3{
     color: #4d5ae5;
 }
 
-.logo .partoflogo{
+header .logo .partoflogo{
     color: #2e2f42;
+}
+
+footer .logo .partoflogo{
+    color: #F4F4FD;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    
 }
