--- a/css/styles.css
+++ b/css/styles.css
@@ -72,5 +72,9 @@ footer .logo .partoflogo{
     color: #F4F4FD;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    
+
+}
+
+footer .small{
+    color: #F4F4FD;
 }
