--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ footer .logo .partoflogo{
 
 }
 
-footer .small{
+footer .info{
     color: #F4F4FD;
     line-height: 1.5;
     letter-spacing: 0.02em;
