--- a/css/styles.css
+++ b/css/styles.css
@@ -13,12 +13,14 @@ h1{
     text-align: center;
 }
 
-h2{
+.section-header{
     font-size: 36px;
     font-weight: bold;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2E2F42;
+    line-height: 1.2;
+    
 }
 
 h3{
