--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,18 @@ body{
     background-color: #FFFFFF;
 }
 
-h1{
+.main-headline{
     font-weight: bold;
     font-size: 56px;
     letter-spacing: 0.02em;
     line-height: 60px;
     text-align: center;
+    line-height: 1.07;
+    color: #ffffff;
+}
+
+.order{
+    background-color: #2e2f42;
 }
 
 .team{
@@ -48,11 +54,24 @@ h1{
     line-height: 24px;
 }
 
-.button-text{
-    font-weight: medium;
+.button{
+    font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.04em;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #ffffff;
+    cursor: pointer;
 }
+
+.button :hover{
+    background-color: #404BBF;
+}
+
+.button :focus{
+    background-color: #404BBF;
+}
+
 
 .link{
     font-size: 12px;
